src/test/resources/Parser/SyntaxErrors/IncompatibleTypesIf.front
class A:
    void test() {
        if (this){}
    }